# GCOPTER

./: .gitignore
gcopter/: CMakeLists.txt
gcopter/config/: global_planning.yaml
gcopter/include/: SpaceTimeTrajectoryPlanner.cpp
gcopter/include/NUBSTrajectory/: NUBSOptimizer.hpp  NUBSOptimizerZO.hpp  NUBSTrajectory.hpp
gcopter/include/SplineTrajectory/: SplineOptimizer.hpp  SplineTrajectory.hpp
gcopter/include/TrajectoryOptComponents/: IdentitySpatialMap.hpp  LinearTimeCost.hpp  PolytopeSpatialMap.hpp  PolytopeSpatialMapZO.hpp  SFCControlPointsCosts.hpp  SFCControlPointsCostsZO.hpp
gcopter/include/gcopter/: abc_solver.hpp  dpasa_solver.hpp  gcopter.hpp  nubs_sfc_optimizer.hpp  nubs_sfc_optimizer_zo.hpp  spline_sfc_optimizer.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/launch/: test_planning.launch
gcopter/scripts/: plot_scale_scan.py
gcopter/src/: global_planning.cpp  test_planning.cpp
